--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "axios": "^0.19.2",
     "canvas": "^2.6.1",
     "changedpi": "^1.0.4",
     "express": "^4.17.1",
